--- a/history.txt
+++ b/history.txt
@@ -136,3 +136,24 @@ git push -u origin main
 git push -u origin master
 clear
 git init
+git add .
+git commit -m "Initial commit of existing project files"
+git remote add origin https://github.com/AschereVerhen/NuDots.git
+git push -u origin master
+git push -u origin main
+ssh-keygen -t ed25519 -C "aschereverhen@gmail.com"
+eval "$(ssh-agent -s)"
+ssh-agent -s
+clear
+(ssh-agent -s)
+clear
+ssh-add ~/.ssh/id_ed25519
+cat ~/.ssh/id_ed25519.pub
+git push -u origin main
+git remote set-url origin git@github.com:AschereVerhen/NuDots.git
+ssh -T git@github.com
+clear
+git push -u origin main
+git pull
+clear
+ls
